# Etl-Dbt-Sales-Prediction

./: Big-Mart-Sales-Prediction.ipynb  README.md  dbt_project.yml  pyproject.toml
data/: df_limpo.csv
marts/: dataset_modelagem.sql  performance_lojas.sql  schema.yml  vendas_tipo_item.sql
models/: sources.yml  stg_train.sql
models/marts/: dim_items.sql  dim_outlets.sql  fact_sales.sql  mart_sales.sql
models/staging/: schema.yml  stg_items.sql  stg_outlets.sql  stg_sales.sql  stg_vendas.sql
