[project]
name = "mart-sales-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovina Magalhaes",email = "lagmagalhaes@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "dbt (>=1.0.0.40.3,<2.0.0.0.0)",
    "dbt-core (>=1.9.4,<2.0.0)",
    "dbt-snowflake (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
